--- a/front_card/templates/contacts.html
+++ b/front_card/templates/contacts.html
@@ -4,32 +4,20 @@
 {% block content %}
 
 <div class="px-4 py-5 my-5 text-center">
-    <h1 class="display-5 fw-bold text-body-emphasis">Как с нами связаться</h1>
+    <h1 class="display-5 fw-bold text-body-emphasis">Как с нами связаться:</h1>
     <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">ООО «Славная клиника докторы Володьки»</p>
-      <p class="lead mb-4">Санкт-Петербург 190123, ул.самая красивая, дом самый опрятный, 2а</p>
+      <p class="lead mb-4">«Клиника доктора Затулкина»</p>
+      <p class="lead mb-4">Санкт-Петербург, ул Седова, дом 84, литера А, помещ. 9-Н, офис 1</p>
       <p class="lead mb-4">График работы: Пн-суб.  9:00 — 21:00 ,  Вск. 10:00 — 19:00
       <p class="lead mb-4">
-        <a href="tel:+78121234567" role="link">
+        <a href="tel:+79817912180" role="link">
             <i class="bi bi-telephone">
-                +7 (812) 123-45-67
+              +7(981) 791-21-80
             </i>
         </a>
       </p>
-      <p class="lead mb-4">
-        <a href="tel:+78121234567" role="link">
-            <i class="bi bi-telephone">
-                +7 (812) 123-45-67
-            </i>
-        </a>
-      </p>
-
-        
-      <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aa8483ca8d0dbbedf06863465b7238dcbcf710063c97eb81efa6165553c0ac72a&amp;source=constructor" width="500" height="400" frameborder="0"></iframe>
-        
-
-      <p class="lead mb-4">Эл. почта: vdentura@yandex.ru</p>
-      <p class="lead mb-4">Мы в соц. сетях: https://vk.com/vdentura</p>
+      <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Санкт‑Петербург</a><a href="https://yandex.ru/maps/2/saint-petersburg/house/ulitsa_sedova_84/Z0kYcgRlTUMGQFtjfXR2dHxkZg==/?ll=30.438896%2C59.875598&utm_medium=mapframe&utm_source=maps&z=16.28" style="color:#eee;font-size:12px;position:absolute;top:14px;">Улица Седова, 84 — Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/?ll=30.438896%2C59.875598&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NzQzODEwNxJI0KDQvtGB0YHQuNGPLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0YPQu9C40YbQsCDQodC10LTQvtCy0LAsIDg0IgoN03vzQRUTgG9C&z=16.28" width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+      <p class="lead mb-4">Эл. почта: drzatulkin@yandex.ru</p>
     </div>
   </div>
 
