--- a/front_card/templates/cost.html
+++ b/front_card/templates/cost.html
@@ -4,7 +4,7 @@
 {% block content %}
   <div class="accordion" id="accordionExample">
     <div class="accordion-item">
-      <h2 class="accordion-header" id="therapeuticDentistryheading"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#therapeuticDentistry" aria-expanded="false" aria-controls="therapeuticDentistry">Терапевтическая стоматология</button></h2>
+      <h2 class="accordion-header" id="therapeuticDentistryheading"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#therapeuticDentistry" aria-controls="therapeuticDentistry">Терапевтическая стоматология</button></h2>
       <div id="therapeuticDentistry" class="accordion-collapse collapse show" aria-labelledby="therapeuticDentistryheading" data-bs-parent="#accordionExample">
         <div class="accordion-body">
           <table class="table table-striped">
@@ -154,7 +154,7 @@
       </div>
     </div>
     <div class="accordion-item">
-      <h2 class="accordion-header" id="surgicalDentistryHeading"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#surgicalDentistry" aria-expanded="false" aria-controls="collapseTwo">Хирургическая стоматология</button></h2>
+      <h2 class="accordion-header" id="surgicalDentistryHeading"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#surgicalDentistry" aria-controls="collapseTwo">Хирургическая стоматология</button></h2>
       <div id="surgicalDentistry" class="accordion-collapse collapse" aria-labelledby="surgicalDentistryHeading" data-bs-parent="#accordionExample">
         <div class="accordion-body">
           <table class="table table-striped">
