--- a/front_card/templates/doctors.html
+++ b/front_card/templates/doctors.html
@@ -5,28 +5,37 @@
 
 <div class="row featurette">
     <div class="col-md-7">
-      <h2 class="featurette-heading fw-normal lh-1">Что делает нас особенными?</h2>
-      <p class="lead">Прежде всего, мы стремимся к постоянному совершенствованию и соблюдению самых высоких стандартов качества. Наша клиника оснащена современным оборудованием, которое позволяет нам проводить точные диагностику и лечение с использованием передовых технологий. Мы постоянно следим за новыми тенденциями в стоматологии и внедряем инновационные методики, чтобы предоставить нашим пациентам самое современное лечение. </p>
-      <p class="lead">Наша дружелюбная и опытная команда стоматологов и медицинского персонала всегда готова помочь вам с любыми стоматологическими потребностями. Мы предлагаем широкий спектр услуг, включая профессиональную гигиену полости рта, лечение кариеса, эстетическую реставрацию, протезирование, ортодонтию и многое другое. Независимо от того, нужно ли вам основное лечение или сложные хирургические вмешательства, вы можете полностью положиться на нас.</p>
+      <h2 class="featurette-heading fw-normal lh-1">Затулкин Владимир Александрович</h2>
+      <p class="lead">врач-стоматолог-терапевт, врач-стоматолог-хирург, врач-стоматолого-ортопед, генеральный директор</p>
     </div>
     <div class="col-md-5">
         <img src="{% static 'images/pexels-bakytzhan-baurzhanov-9951395.jpg' %}" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" type="image/svg+xml" width="500" height="500" />
     </div>
-  </div>
+</div>
 
 <hr class="featurette-divider">
 
 <div class="row featurette">
     <div class="col-md-7 order-md-2">
-      <h2 class="featurette-heading fw-normal lh-1">Забота и безопасность</span></h2>
-      <p class="lead">В нашей клинике мы понимаем, что поход к стоматологу может вызывать беспокойство и тревогу. Поэтому мы создали уютную и спокойную атмосферу, где вы сможете расслабиться и довериться нашей команде профессионалов. Наш персонал обладает не только высокой квалификацией, но и дружелюбным отношением, которое поможет вам почувствовать себя как дома.</p>
-      <p class="lead">В клинике мы придерживаемся высоких стандартов гигиены и безопасности, соблюдая все протоколы стерилизации и использования стерильных инструментов. Ваше здоровье и комфорт - наша главная забота.</p>
-      <p class="lead">Мы стремимся к постоянному совершенствованию и обеспечению наших пациентов наилучшими результатами. Наша цель - не просто обрабатывать зубы, а создавать красивые улыбки, которые будут дарить вам уверенность и радость на протяжении всей жизни.</p>
+      <h2 class="featurette-heading fw-normal lh-1">Маракина Ольга Анатольевна</h2>
+      <p class="lead">врач ортодонт</p>
     </div>
     <div class="col-md-5 order-md-1">
         <img src="{% static 'images/pexels-anna-morgan-12374352.jpg' %}" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" type="image/svg+xml" width="500" height="500" />
     </div>
   </div>
+
+  <hr class="featurette-divider">
+
+  <div class="row featurette">
+    <div class="col-md-7">
+      <h2 class="featurette-heading fw-normal lh-1">Бездудная Ирина Владимировна</h2>
+      <p class="lead">медицинская сестра</p>
+    </div>
+    <div class="col-md-5">
+        <img src="{% static 'images/pexels-bakytzhan-baurzhanov-9951395.jpg' %}" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" type="image/svg+xml" width="500" height="500" />
+    </div>
+</div>
 
 {% endblock content %}
 
