--- a/front_card/templates/index.html
+++ b/front_card/templates/index.html
@@ -2,36 +2,36 @@
 {% load static %}
 {% block content %}
 
-<div class="container py-4">
-    <div class="p-5 mb-4 bg-body-tertiary rounded-3">
-        <div class="container-fluid py-5">
-        <h2 class="display-5 fw-bold">Ваша улыбка - наша главная цель!</h2>
-        <p class="col-md-8 fs-4">Мы - команда профессионалов, предлагающая высококачественные стоматологические услуги с непревзойденным уровнем заботы и внимания к каждому пациенту. Наша миссия - помочь вам достичь идеального здоровья полости рта и обеспечить вам красивую и здоровую улыбку, которой вы будете гордиться.</p>
-        </div>
-    </div>
-</div>
-
 <div class="row align-items-md-stretch">
   <div class="col-md-4">
     <div class="h-100 p-5 text-bg-dark rounded-3">
       <h2>Терапевтическая стоматология</h2>
       <p>В нашей клинике терапевтической стоматологии мы стремимся не только восстановить здоровье ваших зубов, но и создать истинное произведение искусства.</p>
-      <button class="btn btn-outline-light" type="button">Перейти</button>
+      <a href="/cost" class="btn btn-outline-light" role="button">Перейти</a>
     </div>
   </div>
   <div class="col-md-4">
     <div class="h-100 p-5 bg-body-tertiary border rounded-3">
       <h2>Ортопедическая стоматология</h2>
       <p>Мы предлагаем широкий спектр услуг, включая изготовление коронок и мостов, протезирование зубов, установку имплантатов и ортодонтическую коррекцию.</p>
-      <button class="btn btn-outline-secondary" type="button">Узнать больше</button>
+      <a href="/cost" class="btn btn-outline-secondary" role="button">Узнать больше</a>
     </div>
   </div>
   <div class="col-md-4">
     <div class="h-100 p-5 bg-body-tertiary border rounded-3">
       <h2>Хирургическая стоматология</h2>
       <p>Мы предлагаем широкий спектр услуг, включая изготовление коронок и мостов, протезирование зубов, установку имплантатов и ортодонтическую коррекцию.</p>
-      <button class="btn btn-outline-secondary" type="button">Посмотреть</button>
+      <a href="/cost" class="btn btn-outline-secondary" role="button">Посмотреть</a>
     </div>
+  </div>
+</div>
+
+<div class="container py-4">
+  <div class="p-5 mb-4 bg-body-tertiary rounded-3">
+      <div class="container-fluid py-5">
+      <h2 class="display-5 fw-bold">Ваша улыбка - наша главная цель!</h2>
+      <p class="col-md-8 fs-4">Мы - команда профессионалов, предлагающая высококачественные стоматологические услуги с непревзойденным уровнем заботы и внимания к каждому пациенту. Наша миссия - помочь вам достичь идеального здоровья полости рта и обеспечить вам красивую и здоровую улыбку, которой вы будете гордиться.</p>
+      </div>
   </div>
 </div>
 
