--- a/front_card/templates/base.html
+++ b/front_card/templates/base.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Клиника доктора Володьки</title>
+    <title>Клиника доктора Затулкина</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     {% comment %} <script src="{% static 'js/main.js' %}" {% endcomment %}
-    <title>{% block title %}Стоматологическая клиника доктора Володьки{% endblock title %}</title>
+    <title>{% block title %}Клиника доктора Затулкина{% endblock title %}</title>
 
     <style>
         .bd-placeholder-img {
@@ -26,13 +26,6 @@
         }
       }
     </style>
-    <script>
-      console.log("HELLO!")
-
-      $('#makeAnAppointmentModal').on('shown.bs.modal', function () {
-        $('#makeAnAppointmentButton').trigger('focus')
-  })
-    </script>
 </head>
 <body>
     {% include "header.html"  %}
@@ -42,8 +35,6 @@
     </main>
 
     {% include "footer.html"  %}
-
-    {% include "modals.html"%}
 
 </body>
 </html>
