--- a/front_card/templates/contacts.html
+++ b/front_card/templates/contacts.html
@@ -18,6 +18,7 @@
       </p>
       <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Санкт‑Петербург</a><a href="https://yandex.ru/maps/2/saint-petersburg/house/ulitsa_sedova_84/Z0kYcgRlTUMGQFtjfXR2dHxkZg==/?ll=30.438896%2C59.875598&utm_medium=mapframe&utm_source=maps&z=16.28" style="color:#eee;font-size:12px;position:absolute;top:14px;">Улица Седова, 84 — Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/?ll=30.438896%2C59.875598&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NzQzODEwNxJI0KDQvtGB0YHQuNGPLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0YPQu9C40YbQsCDQodC10LTQvtCy0LAsIDg0IgoN03vzQRUTgG9C&z=16.28" width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
       <p class="lead mb-4">Эл. почта: drzatulkin@yandex.ru</p>
+      <a href="{% static 'extract_zatulkin.pdf' %}">Выписка из реестра лицензий</a>
     </div>
   </div>
 
