--- a/front_card/templates/doctors.html
+++ b/front_card/templates/doctors.html
@@ -6,7 +6,7 @@
 <div class="row featurette">
     <div class="col-md-7">
       <h2 class="featurette-heading fw-normal lh-1">Затулкин Владимир Александрович</h2>
-      <p class="lead">врач-стоматолог-терапевт, врач-стоматолог-хирург, врач-стоматолого-ортопед, генеральный директор</p>
+      <p class="lead">врач-стоматолог-терапевт, врач-стоматолог-хирург, врач-стоматолог-ортопед, генеральный директор</p>
     </div>
     <div class="col-md-5">
         <img src="{% static 'images/pexels-bakytzhan-baurzhanov-9951395.jpg' %}" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" type="image/svg+xml" width="500" height="500" />
