--- a/front_card/templates/index.html
+++ b/front_card/templates/index.html
@@ -4,24 +4,24 @@
 
 <div class="row align-items-md-stretch">
   <div class="col-md-4">
-    <div class="h-100 p-5 text-bg-dark rounded-3">
+    <div class="h-100 p-5 text-bg-secondary rounded-3">
       <h2>Терапевтическая стоматология</h2>
       <p>В нашей клинике терапевтической стоматологии мы стремимся не только восстановить здоровье ваших зубов, но и создать истинное произведение искусства.</p>
       <a href="/cost" class="btn btn-outline-light" role="button">Перейти</a>
     </div>
   </div>
   <div class="col-md-4">
-    <div class="h-100 p-5 bg-body-tertiary border rounded-3">
+    <div class="h-100 p-5 text-bg-secondary border rounded-3">
       <h2>Ортопедическая стоматология</h2>
       <p>Мы предлагаем широкий спектр услуг, включая изготовление коронок и мостов, протезирование зубов, установку имплантатов и ортодонтическую коррекцию.</p>
-      <a href="/cost" class="btn btn-outline-secondary" role="button">Узнать больше</a>
+      <a href="/cost" class="btn btn-outline-light" role="button">Узнать больше</a>
     </div>
   </div>
   <div class="col-md-4">
-    <div class="h-100 p-5 bg-body-tertiary border rounded-3">
+    <div class="h-100 p-5 text-bg-secondary border rounded-3">
       <h2>Хирургическая стоматология</h2>
       <p>Мы предлагаем широкий спектр услуг, включая изготовление коронок и мостов, протезирование зубов, установку имплантатов и ортодонтическую коррекцию.</p>
-      <a href="/cost" class="btn btn-outline-secondary" role="button">Посмотреть</a>
+      <a href="/cost" class="btn btn-outline-light" role="button">Посмотреть</a>
     </div>
   </div>
 </div>
